--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,9 @@
     "angular-resource": "^1.3.0",
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0"
+    "angular-touch": "^1.3.0",
+    "slick.js": "~1.3.15",
+    "flexnav": "~1.3.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
