--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "slick.js": "~1.3.15",
-    "flexnav": "~1.3.3"
+    "flexnav": "~1.3.3",
+    "ng-resize": "~1.1.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
